# naaris

./: Cargo.toml
standalone/: Cargo.toml  settings.toml
standalone/src/: app.rs  main.rs  settings.rs  sound.rs
standalone/src/renderers/: game_renderer.rs  mod.rs  tgm3master_renderer.rs
tetris/: Cargo.toml
tetris/examples/: aaa.rs
tetris/src/: board.rs  cell.rs  game.rs  lib.rs  piece.rs
tetris/src/modes/: mod.rs  tgm3master.rs
