[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
num_enum = "0.5.7"
rand = "0.8.5"
thiserror = "1.0.30"

[target.'cfg(not(windows))'.dependencies]
termion = "1.5.6"
